# ot.hs

./: .ghci  .gitignore  .travis.yml  LICENSE  OperationalTransformation.hs  README.md  TODO.md  TestOperationalTransformation.hs  operational-transformation.cabal  ot.cabal
src/Control/: OperationalTransformation.hs
src/Control/OperationalTransformation/: Client.hs  Properties.hs  Selection.hs  Server.hs  Text.hs
src/Data/Text/: Rope.hs
src/Text/: OperationalTransformation.hs
test/: TestOperationalTransformation.hs  TestSuite.hs
test/Control/OperationalTransformation/: ClientServerTests.hs
test/Control/OperationalTransformation/Selection/: Tests.hs
test/Control/OperationalTransformation/Text/: Tests.hs
