Name:                operational-transformation
Version:             0.1
Synopsis:            Real-time collaborative editing with Operational transformation
-- A longer description of the package.
-- Description:         
Homepage:            https://github.com/timjb/haskell-operational-transformation
License:             MIT
License-file:        LICENSE
Author:              Tim Baumann
Maintainer:          tim@timbaumann.info

-- A copyright notice.
-- Copyright:           

Category:            Text
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  Ghc-options:         -Wall
  Hs-source-dirs:      src
  Exposed-modules:     Control.OperationalTransformation, Control.OperationalTransformation.Text, Control.OperationalTransformation.Properties, Control.OperationalTransformation.Client, Control.OperationalTransformation.Server
  Build-depends:       base >= 4 && < 5,
                       text >= 0.11.1 && < 0.12,
                       aeson >= 0.6.0.2 && < 0.7,
                       attoparsec >= 0.10.1.1 && < 1,
                       QuickCheck >= 2.4.2 && < 2.5

  -- Modules not exported by this package.
  -- Other-modules:       

Test-suite tests
  Ghc-options:         -Wall -rtsopts
  Hs-source-dirs:      src test
  type:                exitcode-stdio-1.0
  main-is:             TestSuite.hs
  Build-depends:       QuickCheck >= 2.4.2 && < 2.5,
                       -- Copy pasted from library dependencies
                       base >= 4 && < 5,
                       text >= 0.11.1 && < 0.12,
                       QuickCheck >= 2.4.2 && < 2.5,
                       test-framework >= 0.6 && < 0.7,
                       test-framework-quickcheck2 >= 0.2.12.2 && < 0.3
